@@ -1,234 +1,253 @@
 package com.jjg.game.sim.service;
 
 import com.jjg.game.core.constant.Code;
+import com.jjg.game.core.constant.TaskConstant;
 import com.jjg.game.core.data.RankChange;
 import com.jjg.game.core.data.RankEntry;
+import com.jjg.game.core.pb.KVInfo;
 import com.jjg.game.core.service.RankService;
+import com.jjg.game.core.task.db.TaskDetail;
 import com.jjg.game.sampledata.GameDataManager;
-import com.jjg.game.sampledata.bean.ItemCfg;
-import com.jjg.game.sampledata.bean.MedalBuffCfg;
-import com.jjg.game.sampledata.bean.MedalListCfg;
+import com.jjg.game.sampledata.bean.GlobalConfigCfg;
 import com.jjg.game.sim.constant.BuildingOutputType;
 import com.jjg.game.sim.constant.SimConstant;
 import com.jjg.game.sim.data.SimPlayerContext;
+import com.jjg.game.sim.data.SimTaskData;
 import com.jjg.game.sim.pb.res.ResChangeShowMedal;
 import com.jjg.game.sim.pb.res.ResMedalPanel;
-import com.jjg.game.sim.pb.struct.MedalQualityInfo;
+import com.jjg.game.sim.pb.struct.AchievementBadgeInfo;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
-import java.util.*;
+import java.util.ArrayList;
+import java.util.Comparator;
+import java.util.EnumMap;
+import java.util.HashSet;
+import java.util.LinkedHashSet;
+import java.util.List;
+import java.util.Map;
+import java.util.Set;
 
 /**
- * 成就勋章服务: 勋章激活判定、品质统计、全服排行、品质加成 (MedalBuff)。
- * <p>
- * 勋章"品质"取自勋章道具 {@link ItemCfg#getQuality()} (1精英/2大亨/3富翁/4神豪)。
- * 全服排行以"已激活勋章数"为分值, 惰性写入 (仅打开面板/领奖后且分值变化时更新), 避免登录全量写 Redis。
- *
- * @author 11
- * @date 2026/7/2
+ * 成就徽章服务：按 BadgeID 汇总完成任务数，解析 MedalBuff 档位，维护排行及固定值加成缓存。
  */
 @Service
 public class SimMedalService {
     private static final Logger log = LoggerFactory.getLogger(SimMedalService.class);
-
-    //全服勋章榜 (累计, 不分赛季不重置); 分值=已激活勋章数
     private static final String MEDAL_RANK_KEY = "sim:medal:rank";
-    //勋章品质区间: 2精英 3大亨 4富翁 5神豪
-    private static final int QUALITY_MIN = 2;
-    private static final int QUALITY_MAX = 5;
-    private static final int PERMIL_BASE = 10000;
-
-    //勋章加成指向 condition 表 id (加成属性定义, 单位千分比 ‰; value/1000 = 倍率, 与雇员加成同基数)
-    private static final int COND_REST_POWER = 12404;    //休息建筑-能量增加收益
-    private static final int COND_GOLD_BUILDING = 12405;  //所有产金币的建筑增加收益
-    private static final int COND_AWARENESS = 12406;      //知名度增加
-    private static final int COND_AD_GOLD = 12408;        //广告金币收益增加
+    private static final int BASIS_POINTS = 10000;
 
     @Autowired
     private RankService rankService;
+    @Autowired
+    private SimTaskConfigService taskConfig;
 
-    // =====================================================================
-    // 勋章激活
-    // =====================================================================
-
-    /**
-     * 玩家已激活勋章配置id列表 (按配置顺序)
-     */
+    /** 玩家至少完成一个对应成就后即获得徽章，是否激活 Buff 档位由 CollectNum 独立决定。 */
     public List<Integer> getActivatedMedalIds(SimPlayerContext ctx) {
-        if (ctx.getSimBaseData().getAllMedalIds() == null) {
-            return Collections.emptyList();
+        SimTaskData data = ctx == null ? null : ctx.getSimTaskData();
+        if (data == null) {
+            return List.of();
         }
-
-        List<MedalListCfg> configs = GameDataManager.getMedalListCfgList();
-        if (configs == null || configs.isEmpty()) {
-            return Collections.emptyList();
-        }
-        Set<Integer> activated = ctx.getSimBaseData().getAllMedalIds();
         List<Integer> result = new ArrayList<>();
-        for (MedalListCfg cfg : configs) {
-            if (cfg == null || !cfg.getIsOpen() || !activated.contains(cfg.getId())) {
-                continue;
+        for (SimTaskConfigService.AchievementBadgeDef badge : taskConfig.badges()) {
+            int completed = completedCount(data, badge);
+            if (completed > 0) {
+                result.add(badge.badgeId());
             }
-            result.add(cfg.getId());
         }
         return result;
     }
 
-    /**
-     * 勋章品质 (取自勋章道具品质); 配置缺失返回 0。
-     */
-    private int qualityOf(MedalListCfg cfg) {
-        if (cfg == null) {
-            return 0;
-        }
-        ItemCfg item = GameDataManager.getItemCfg(cfg.getId());
-        return item == null ? 0 : item.getQuality();
-    }
-
-    // =====================================================================
-    // 勋章面板 (成就-勋章子页)
-    // =====================================================================
-
-    /**
-     * 组装勋章面板: 已激活列表 + 达成统计 + 各品质统计与加成档 + 全服排名百分比。
-     * 单次背包读取内完成激活判定与品质归类, 避免多次查库。
-     */
     public ResMedalPanel buildMedalPanel(SimPlayerContext ctx) {
         ResMedalPanel res = new ResMedalPanel(Code.SUCCESS);
-        long playerId = ctx.playerId();
-        List<Integer> activated = new ArrayList<>();
-        int[] qualityCount = new int[QUALITY_MAX + 1];
-        int total = 0;
-
-        for (MedalListCfg cfg : GameDataManager.getMedalListCfgList()) {
-            if (cfg == null || !cfg.getIsOpen()) {
-                continue;
-            }
-            total++;
-
-            if (ctx.getSimBaseData().getAllMedalIds() != null && ctx.getSimBaseData().getAllMedalIds().contains(cfg.getId())) {
-                activated.add(cfg.getId());
-                int q = qualityOf(cfg);
-                qualityCount[q]++;
-            }
+        SimTaskData data = ctx == null ? null : ctx.getSimTaskData();
+        if (data == null) {
+            res.code = Code.NOT_FOUND;
+            return res;
         }
 
-        res.activatedMedalIds = activated;
-        res.totalMedalCount = total;
-        res.qualityInfos = buildQualityInfos(qualityCount);
-        res.rankPermil = syncAndGetRankPermil(playerId, activated.size());
-        res.medalShowMax = GameDataManager.getGlobalConfigCfg(SimConstant.Common.MEDAL_SHOW_MAX_ID).getIntValue();
-        res.showMedalIds = ctx.getSimBaseData().getShowMedalIds();
+        List<BadgeSnapshot> snapshots = new ArrayList<>();
+        int completedTotal = 0;
+        int taskTotal = 0;
+        for (SimTaskConfigService.AchievementBadgeDef badge : taskConfig.badges()) {
+            int completed = completedCount(data, badge);
+            completedTotal += completed;
+            taskTotal += badge.taskIds().size();
+            snapshots.add(new BadgeSnapshot(
+                    badge, completed, badge.activeTier(completed), badge.nextTier(completed)));
+        }
+        snapshots.sort(Comparator
+                .comparing((BadgeSnapshot snapshot) -> !snapshot.unlocked())
+                .thenComparing(Comparator.comparingInt(BadgeSnapshot::activeCollectNum).reversed())
+                .thenComparingInt(snapshot -> snapshot.badge().badgeId()));
+
+        EnumMap<BuildingOutputType, Integer> activeBuffs = calcActiveMedalBuffs(data);
+        ctx.setMedalBuffMap(activeBuffs);
+        res.completedAchievementCount = completedTotal;
+        res.totalAchievementCount = taskTotal;
+        res.rankBasisPoints = syncAndGetRankBasisPoints(ctx.playerId(), completedTotal);
+        res.activeBuffs = toKvList(activeBuffs);
+        res.badgeInfos = snapshots.stream().map(this::toInfo).toList();
+        res.medalShowMax = medalShowMax();
+        res.showMedalIds = sanitizeDisplayedBadges(ctx, getActivatedMedalIds(ctx), res.medalShowMax);
         return res;
     }
 
-    /**
-     * 修改展示中的勋章
-     *
-     * @param ctx
-     * @return
-     */
+    /** 修改场景和个人简介共用的徽章展示列表。空列表表示全部取消。 */
     public ResChangeShowMedal changeShowMedal(SimPlayerContext ctx, List<Integer> newMedalIds) {
         ResChangeShowMedal res = new ResChangeShowMedal(Code.SUCCESS);
-
-        if (newMedalIds == null || newMedalIds.isEmpty()) {
-            ctx.getSimBaseData().setShowMedalIds(null);
-            log.warn("玩家卸载所有勋章 playerId={},newMedalId={}", ctx.playerId(), newMedalIds);
+        SimTaskData data = ctx == null ? null : ctx.getSimTaskData();
+        if (data == null) {
+            res.code = Code.NOT_FOUND;
             return res;
         }
 
-        //检查是否超过限制
-        int showMax = GameDataManager.getGlobalConfigCfg(SimConstant.Common.MEDAL_SHOW_MAX_ID).getIntValue();
-        if (newMedalIds.size() > showMax) {
-            res.code = Code.FORBID;
-            log.warn("展示的勋章已经达到上限，无法 playerId={},newMedalId={}", ctx.playerId(), newMedalIds);
+        List<Integer> requested = newMedalIds == null ? List.of() : newMedalIds;
+        int showMax = medalShowMax();
+        LinkedHashSet<Integer> unique = new LinkedHashSet<>(requested);
+        Set<Integer> activated = new HashSet<>(getActivatedMedalIds(ctx));
+        if (requested.size() > showMax || unique.size() != requested.size()
+                || unique.contains(null) || !activated.containsAll(unique)) {
+            res.code = Code.PARAM_ERROR;
+            res.showMedalIds = new ArrayList<>(data.getDisplayedMedalIds());
             return res;
         }
 
-        for (int newMedalId : newMedalIds) {
-            if (ctx.getSimBaseData().getAllMedalIds() == null || !ctx.getSimBaseData().getAllMedalIds().contains(newMedalId)) {
-                res.code = Code.PARAM_ERROR;
-                log.warn("新增展示勋章时，该勋章未激活 playerId={},newMedalIds={},newMedalId={}", ctx.playerId(), newMedalIds, newMedalId);
-                return res;
-            }
-            MedalListCfg medalListCfg = GameDataManager.getMedalListCfg(newMedalId);
-            if (medalListCfg == null || !medalListCfg.getIsOpen()) {
-                res.code = Code.SAMPLE_ERROR;
-                log.warn("新增展示勋章时，该勋章配置错误 playerId={},newMedalIds={},newMedalId={}", ctx.playerId(), newMedalIds, newMedalId);
-                return res;
-            }
-        }
-
-        ctx.getSimBaseData().setShowMedalIds(newMedalIds);
-        res.showMedalIds = ctx.getSimBaseData().getShowMedalIds();
+        List<Integer> displayed = new ArrayList<>(requested);
+        data.setDisplayedMedalIds(displayed);
+        ctx.setLastSaveTime(0);
+        res.showMedalIds = new ArrayList<>(displayed);
+        log.info("玩家[{}]设置展示徽章 {}", ctx.playerId(), displayed);
         return res;
     }
 
-    /**
-     * 按品质输出统计与当前激活的加成档 (MedalBuff)。始终输出 4 个品质, 便于客户端固定展示。
-     */
-    private List<MedalQualityInfo> buildQualityInfos(int[] qualityCount) {
-        List<MedalQualityInfo> list = new ArrayList<>(QUALITY_MAX);
-        for (int q = QUALITY_MIN; q <= QUALITY_MAX; q++) {
-            MedalQualityInfo info = new MedalQualityInfo();
-            info.quality = q;
-            info.collectedCount = qualityCount[q];
-            info.activatedBuffCfgId = activatedBuffCfg(q, qualityCount[q]);
-            list.add(info);
+    /** 成就完成后一次刷新排行分值与固定值加成缓存。 */
+    public void refreshAchievementState(SimPlayerContext ctx) {
+        if (ctx == null || ctx.getSimTaskData() == null) {
+            return;
         }
-        return list;
+        try {
+            SimTaskData data = ctx.getSimTaskData();
+            ctx.setMedalBuffMap(calcActiveMedalBuffs(data));
+            syncRankScore(ctx.playerId(), completedAchievementCount(data));
+        } catch (Exception e) {
+            log.warn("刷新成就徽章状态失败 playerId={}", ctx.playerId(), e);
+        }
     }
 
-    /**
-     * 某品质在已收集 collected 个勋章时激活的加成档: 取 MedalBuff 中该品质、CollectNum≤collected 的最高档。
-     *
-     * @return 激活的 MedalBuff 配置id; 未达任何档返回 0
-     */
-    private int activatedBuffCfg(int quality, int collected) {
-        List<MedalBuffCfg> buffs = GameDataManager.getMedalBuffCfgList();
-        if (buffs == null || collected <= 0) {
-            return 0;
+    /** 登录任务数据加载完成后刷新内存加成缓存。 */
+    public void refreshMedalBonusCache(SimPlayerContext ctx) {
+        if (ctx == null || ctx.getSimTaskData() == null) {
+            return;
         }
-        int bestCfgId = 0;
-        int bestCollectNum = -1;
-        for (MedalBuffCfg buff : buffs) {
-            if (buff == null || buff.getMedalType() != quality) {
+        try {
+            ctx.setMedalBuffMap(calcActiveMedalBuffs(ctx.getSimTaskData()));
+        } catch (Exception e) {
+            log.warn("刷新成就徽章加成缓存失败 playerId={}", ctx.playerId(), e);
+        }
+    }
+
+    /** 每个徽章只取完成数达到的最高档，再合并其 BuffId 固定值。 */
+    EnumMap<BuildingOutputType, Integer> calcActiveMedalBuffs(SimTaskData data) {
+        EnumMap<BuildingOutputType, Integer> merged = new EnumMap<>(BuildingOutputType.class);
+        if (data == null) {
+            return merged;
+        }
+        for (SimTaskConfigService.AchievementBadgeDef badge : taskConfig.badges()) {
+            SimTaskConfigService.BadgeBuffTier active = badge.activeTier(completedCount(data, badge));
+            if (active == null || active.buffs().isEmpty()) {
                 continue;
             }
-            if (buff.getCollectNum() <= collected && buff.getCollectNum() > bestCollectNum) {
-                bestCollectNum = buff.getCollectNum();
-                bestCfgId = buff.getId();
+            active.buffs().forEach((type, value) -> merged.merge(type, value, Integer::sum));
+        }
+        return merged;
+    }
+
+    /** 指定产出类型的徽章固定值；管理属性(11)会叠加到服务/知名度/曝光度。 */
+    public int getFixedBonus(SimPlayerContext ctx, BuildingOutputType type) {
+        if (ctx == null || type == null || ctx.getMedalBuffMap().isEmpty()) {
+            return 0;
+        }
+        int value = ctx.getMedalBuffMap().getOrDefault(type, 0);
+        if (type.bonusGroup() != type) {
+            value += ctx.getMedalBuffMap().getOrDefault(type.bonusGroup(), 0);
+        }
+        return value;
+    }
+
+    public int getAdGoldBonusFixed(SimPlayerContext ctx) {
+        return getFixedBonus(ctx, BuildingOutputType.WATCH_ADS_ADD_GOLD);
+    }
+
+    private int completedAchievementCount(SimTaskData data) {
+        int count = 0;
+        for (SimTaskConfigService.AchievementBadgeDef badge : taskConfig.badges()) {
+            count += completedCount(data, badge);
+        }
+        return count;
+    }
+
+    private int completedCount(SimTaskData data, SimTaskConfigService.AchievementBadgeDef badge) {
+        int count = 0;
+        for (Integer taskId : badge.taskIds()) {
+            TaskDetail task = data.getAchievementTasks().get(taskId);
+            if (task != null && task.getStatus() != TaskConstant.TaskStatus.STATUS_IN_PROGRESS) {
+                count++;
             }
         }
-        return bestCfgId;
+        return count;
     }
 
-    // =====================================================================
-    // 全服排行 (已激活勋章数)
-    // =====================================================================
+    private AchievementBadgeInfo toInfo(BadgeSnapshot snapshot) {
+        AchievementBadgeInfo info = new AchievementBadgeInfo();
+        info.badgeId = snapshot.badge().badgeId();
+        info.buildingId = snapshot.badge().buildingId();
+        info.gameId = snapshot.badge().gameId();
+        info.completedTaskCount = snapshot.completedCount();
+        info.totalTaskCount = snapshot.badge().taskIds().size();
+        info.currentBuffCfgId = snapshot.active() == null ? 0 : snapshot.active().cfgId();
+        info.nextBuffCfgId = snapshot.next() == null ? 0 : snapshot.next().cfgId();
+        return info;
+    }
 
-    /**
-     * 领奖后勋章数可能变化时惰性刷新榜单分值 (仅在与现有分值不一致时写入)。
-     */
-    public void refreshRankScore(SimPlayerContext ctx) {
-        try {
-            syncRankScore(ctx.playerId(), getActivatedMedalIds(ctx).size());
-        } catch (Exception e) {
-            log.warn("刷新勋章榜分值失败 playerId={}", ctx.playerId(), e);
+    private List<KVInfo> toKvList(Map<BuildingOutputType, Integer> buffs) {
+        if (buffs == null || buffs.isEmpty()) {
+            return List.of();
         }
+        return buffs.entrySet().stream()
+                .sorted(Comparator.comparingInt(entry -> entry.getKey().getCode()))
+                .map(entry -> new KVInfo(entry.getKey().getCode(), entry.getValue()))
+                .toList();
     }
 
-    /**
-     * 同步榜单分值并返回"全服排名超过"的万分比。分值不一致才写入, 0 分不上榜。
-     *
-     * @return 万分比 (9000 = 超过 90.00%)
-     */
-    private int syncAndGetRankPermil(long playerId, int activatedCount) {
-        syncRankScore(playerId, activatedCount);
-        if (activatedCount <= 0) {
+    private List<Integer> sanitizeDisplayedBadges(SimPlayerContext ctx, List<Integer> activated, int showMax) {
+        Set<Integer> allowed = new HashSet<>(activated);
+        List<Integer> displayed = new ArrayList<>();
+        for (Integer badgeId : ctx.getSimTaskData().getDisplayedMedalIds()) {
+            if (displayed.size() >= showMax) {
+                break;
+            }
+            if (badgeId != null && allowed.contains(badgeId) && !displayed.contains(badgeId)) {
+                displayed.add(badgeId);
+            }
+        }
+        if (!displayed.equals(ctx.getSimTaskData().getDisplayedMedalIds())) {
+            ctx.getSimTaskData().setDisplayedMedalIds(displayed);
+            ctx.setLastSaveTime(0);
+        }
+        return new ArrayList<>(displayed);
+    }
+
+    private int medalShowMax() {
+        GlobalConfigCfg cfg = GameDataManager.getGlobalConfigCfg(SimConstant.Common.MEDAL_SHOW_MAX_ID);
+        return cfg == null ? 0 : Math.max(0, cfg.getIntValue());
+    }
+
+    private int syncAndGetRankBasisPoints(long playerId, int completedCount) {
+        syncRankScore(playerId, completedCount);
+        if (completedCount <= 0) {
             return 0;
         }
         RankEntry my = rankService.getRank(MEDAL_RANK_KEY, playerId);
@@ -236,120 +255,30 @@ public class SimMedalService {
         if (my == null || total <= 0) {
             return 0;
         }
-        //(1 - 名次/总人数) * 100%, 名次从1开始
         double ratio = 1.0 - (double) my.getRank() / total;
-        int permil = (int) Math.round(ratio * PERMIL_BASE);
-        return Math.max(0, Math.min(PERMIL_BASE, permil));
+        int basisPoints = (int) Math.round(ratio * BASIS_POINTS);
+        return Math.max(0, Math.min(BASIS_POINTS, basisPoints));
     }
 
-    /**
-     * 仅当榜单现有分值与目标不同才覆盖写入; 目标为 0 不上榜 (避免 0 分成员污染排名基数)。
-     */
-    private void syncRankScore(long playerId, int activatedCount) {
-        if (activatedCount <= 0) {
+    private void syncRankScore(long playerId, int completedCount) {
+        if (completedCount <= 0) {
             return;
         }
-        long cur = rankService.getPoints(MEDAL_RANK_KEY, playerId);
-        if (cur != activatedCount) {
-            rankService.batchSetPoints(MEDAL_RANK_KEY, List.of(new RankChange(playerId, activatedCount)));
+        long current = rankService.getPoints(MEDAL_RANK_KEY, playerId);
+        if (current != completedCount) {
+            rankService.batchSetPoints(MEDAL_RANK_KEY, List.of(new RankChange(playerId, completedCount)));
         }
     }
 
-    // =====================================================================
-    // 品质加成 (MedalBuff) —— 加成生效
-    // =====================================================================
-
-    /**
-     * 计算玩家当前由勋章品质加成激活的效果 (condition 表 id -> 千分比值), 供收益计算取用。
-     * 每品质取"达标最高档", 合并其 {@code MedalBuff.BuffId} (key 指向 condition 表的加成属性定义)。
-     * 例: 精英收集5→12405(产金币建筑收益+1000‰), 神豪收集8→12408(广告金币收益+2000‰)。
-     */
-    public Map<Integer, Integer> calcActiveMedalBuffs(SimPlayerContext ctx) {
-        Map<Integer, Integer> merged = new HashMap<>();
-        int[] qualityCount = new int[QUALITY_MAX + 1];
-
-        if (ctx.getSimBaseData().getAllMedalIds() != null) {
-            for (int id : ctx.getSimBaseData().getAllMedalIds()) {
-                MedalListCfg medalListCfg = GameDataManager.getMedalListCfg(id);
-                if (medalListCfg == null || !medalListCfg.getIsOpen()) {
-                    continue;
-                }
-                int q = qualityOf(medalListCfg);
-                if (q >= QUALITY_MIN && q <= QUALITY_MAX) {
-                    qualityCount[q]++;
-                }
-            }
+    private record BadgeSnapshot(SimTaskConfigService.AchievementBadgeDef badge, int completedCount,
+                                 SimTaskConfigService.BadgeBuffTier active,
+                                 SimTaskConfigService.BadgeBuffTier next) {
+        boolean unlocked() {
+            return completedCount > 0;
         }
 
-        for (int q = QUALITY_MIN; q <= QUALITY_MAX; q++) {
-            int cfgId = activatedBuffCfg(q, qualityCount[q]);
-            if (cfgId <= 0) {
-                continue;
-            }
-            MedalBuffCfg buff = GameDataManager.getMedalBuffCfg(cfgId);
-            if (buff != null && buff.getBuffId() != null) {
-                buff.getBuffId().forEach((buffId, value) -> merged.merge(buffId, value, Integer::sum));
-            }
+        int activeCollectNum() {
+            return active == null ? 0 : active.collectNum();
         }
-        return merged;
-    }
-
-    /**
-     * 刷新玩家勋章加成缓存 (登录 / 成就领奖后调用)。缓存供收益计算零 IO 读取, 避免高频查背包。
-     */
-    public void refreshMedalBonusCache(SimPlayerContext ctx) {
-        if (ctx == null) {
-            return;
-        }
-        try {
-            ctx.setMedalBuffMap(calcActiveMedalBuffs(ctx));
-        } catch (Exception e) {
-            log.warn("刷新勋章加成缓存失败 playerId={}", ctx.playerId(), e);
-        }
-    }
-
-    /**
-     * 把玩家勋章品质加成 (缓存) 合并进 sim 加成汇总 Map, 仅合并可映射到 {@link BuildingOutputType} 的项
-     * (知名度/休息区能量/产金币建筑); 单位千分比, 与雇员加成同基数, 由各产出点统一按 /1000 生效。
-     * 广告金币收益 (12408) 无对应产出类型, 由离线收益领取点单独取用。
-     */
-    public void mergeMedalBonus(SimPlayerContext ctx, Map<BuildingOutputType, Integer> bonusesMap) {
-        if (ctx == null || bonusesMap == null) {
-            return;
-        }
-        Map<Integer, Integer> medal = ctx.getMedalBuffMap();
-        if (medal == null || medal.isEmpty()) {
-            return;
-        }
-        for (Map.Entry<Integer, Integer> en : medal.entrySet()) {
-            BuildingOutputType type = bonusTypeOf(en.getKey());
-            if (type != null && en.getValue() != null) {
-                bonusesMap.merge(type, en.getValue(), Integer::sum);
-            }
-        }
-    }
-
-    /**
-     * 勋章-广告金币收益加成 (千分比, condition 12408); 无对应产出类型, 看广告领取离线收益时叠加到金币部分。
-     */
-    public int getAdGoldBonusPermil(SimPlayerContext ctx) {
-        if (ctx == null) {
-            return 0;
-        }
-        Map<Integer, Integer> medal = ctx.getMedalBuffMap();
-        Integer v = medal == null ? null : medal.get(COND_AD_GOLD);
-        return v == null ? 0 : v;
-    }
-
-    /**
-     * 勋章加成 condition id -> sim 产出类型 {@link BuildingOutputType}; 无对应 (如广告 12408/曝光度 12407) 返回 null。
-     */
-    private static BuildingOutputType bonusTypeOf(int conditionId) {
-        return switch (conditionId) {
-            case COND_AWARENESS -> BuildingOutputType.AWARENESS;
-            case COND_REST_POWER -> BuildingOutputType.POWER;
-            case COND_GOLD_BUILDING -> BuildingOutputType.GOLD;
-            default -> null;
-        };
     }
 }
