@@ -1,14 +1,20 @@
 package com.jjg.game.sim.service;
 
+import com.jjg.game.core.base.condition.numeric.ConditionEvent;
 import com.jjg.game.core.base.condition.numeric.ConditionRuleRegistry;
 import com.jjg.game.core.base.condition.numeric.ConditionSpec;
+import com.jjg.game.core.base.condition.numeric.GameConditionEvent;
+import com.jjg.game.core.base.condition.numeric.GameWinEvent;
 import com.jjg.game.core.base.condition.numeric.PreparedCondition;
 import com.jjg.game.core.base.condition.numeric.StateConditionEvent;
 import com.jjg.game.core.constant.TaskConstant;
 import com.jjg.game.core.listener.ConfigExcelChangeListener;
 import com.jjg.game.sampledata.GameDataManager;
-import com.jjg.game.sampledata.bean.TaskCfg;
+import com.jjg.game.sampledata.bean.BuildingAreaTableCfg;
 import com.jjg.game.sampledata.bean.ConditionCfg;
+import com.jjg.game.sampledata.bean.MedalBuffCfg;
+import com.jjg.game.sampledata.bean.TaskCfg;
+import com.jjg.game.sim.constant.BuildingOutputType;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -17,44 +23,32 @@ import org.springframework.stereotype.Component;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.Comparator;
+import java.util.EnumMap;
 import java.util.HashMap;
+import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.Map;
-import java.util.Set;
 
 /**
- * sim 任务(主线/成就)配置链。
+ * sim 主线与成就任务配置索引。
  * <p>
- * 配置表 {@code task.xlsx} 缺"后置任务ID"字段(表头该列字段名为空), 故链由"链内任务 id 升序"推导:
- * <ul>
- *   <li>主线(taskType=2): 全部按 id 升序串成单链;</li>
- *   <li>成就(taskType=3): 按 group 分链, 组内按 id 升序成阶梯。</li>
- * </ul>
- *
- * @author 11
- * @date 2026/6/25
+ * 主线(taskType=2)继续按 id 升序组成单链；成就(taskType=7)全部独立生效，通过
+ * {@link TaskCfg#getBadgeID()} 归属 {@link MedalBuffCfg#getMedalType()}。游戏专属徽章再由
+ * MedalBuff.buildID -> BuildingAreaTable.UnlockGameId 得到游戏归属。
  */
 @Component
 public class SimTaskConfigService implements ConfigExcelChangeListener {
     private static final Logger log = LoggerFactory.getLogger(SimTaskConfigService.class);
 
-    /**
-     * 主线链: 按 id 升序的任务 id 列表
-     */
-    private volatile List<Integer> mainChain = Collections.emptyList();
-
-    /**
-     * 成就链: group -> 按 id 升序的任务 id 列表
-     */
-    private volatile Map<Integer, List<Integer>> achievementGroups = Collections.emptyMap();
-
-    /**
-     * 任务 id -> 链内下一节点 id (0 表示末节点)。主线与成就合并索引, 便于 O(1) 取 next。
-     */
-    private volatile Map<Integer, Integer> nextIndex = Collections.emptyMap();
-
-    /** 任务 id -> 已校验条件及兼容旧数据的 Redis featureId。 */
-    private volatile Map<Integer, TaskConditionDef> conditions = Collections.emptyMap();
+    private volatile List<Integer> mainChain = List.of();
+    private volatile Map<Integer, Integer> nextIndex = Map.of();
+    private volatile Map<Integer, TaskConditionDef> conditions = Map.of();
+    private volatile List<Integer> achievementTaskIds = List.of();
+    private volatile Map<Integer, List<Integer>> achievementTasksByBadge = Map.of();
+    private volatile Map<Integer, List<Integer>> achievementTasksByGame = Map.of();
+    private volatile Map<Class<? extends ConditionEvent>, List<Integer>> achievementTasksByEvent = Map.of();
+    private volatile List<Integer> achievementStateTaskIds = List.of();
+    private volatile Map<Integer, AchievementBadgeDef> badgeDefinitions = Map.of();
 
     private final ConditionRuleRegistry conditionRules;
 
@@ -70,131 +64,212 @@ public class SimTaskConfigService implements ConfigExcelChangeListener {
     @Override
     public void initSampleCallbackCollector() {
         addInitSampleFileObserveWithCallBack(TaskCfg.EXCEL_NAME, this::loadChains)
-                .addInitSampleFileObserveWithCallBack(ConditionCfg.EXCEL_NAME, this::loadChains);
+                .addInitSampleFileObserveWithCallBack(ConditionCfg.EXCEL_NAME, this::loadChains)
+                .addInitSampleFileObserveWithCallBack(MedalBuffCfg.EXCEL_NAME, this::loadChains)
+                .addInitSampleFileObserveWithCallBack(BuildingAreaTableCfg.EXCEL_NAME, this::loadChains);
     }
 
     @Override
     public void changeSampleCallbackCollector() {
         addChangeSampleFileObserveWithCallBack(TaskCfg.EXCEL_NAME, this::loadChains)
-                .addChangeSampleFileObserveWithCallBack(ConditionCfg.EXCEL_NAME, this::loadChains);
+                .addChangeSampleFileObserveWithCallBack(ConditionCfg.EXCEL_NAME, this::loadChains)
+                .addChangeSampleFileObserveWithCallBack(MedalBuffCfg.EXCEL_NAME, this::loadChains)
+                .addChangeSampleFileObserveWithCallBack(BuildingAreaTableCfg.EXCEL_NAME, this::loadChains);
     }
 
-    /**
-     * 加载主线/成就链 (初始化与热更共用)
-     */
+    /** 初始化与热更共用：一次构建不可变索引，玩家热路径只读。 */
     public void loadChains() {
         List<TaskCfg> all = GameDataManager.getTaskCfgList();
         if (all == null || all.isEmpty()) {
-            log.warn("加载 sim 任务链失败: task 配置为空");
+            log.warn("加载 sim 任务配置失败: task 配置为空");
             return;
         }
+
+        Map<Integer, BadgeSeed> badgeSeeds = loadBadgeSeeds();
         List<TaskCfg> mains = new ArrayList<>();
-        Map<Integer, List<TaskCfg>> groups = new HashMap<>();
+        List<Integer> achievements = new ArrayList<>();
+        Map<Integer, List<Integer>> tasksByBadge = new HashMap<>();
+        Map<Integer, List<Integer>> tasksByGame = new HashMap<>();
+        Map<Class<? extends ConditionEvent>, List<Integer>> tasksByEvent = new HashMap<>();
+        List<Integer> stateTasks = new ArrayList<>();
         Map<Integer, TaskConditionDef> tmpConditions = new HashMap<>();
+
         for (TaskCfg cfg : all) {
-            if (cfg.getTaskType() != TaskConstant.TaskType.MAIN_LINE
-                    && cfg.getTaskType() != TaskConstant.TaskType.ACHIEVEMENT) {
+            if (cfg == null || (cfg.getTaskType() != TaskConstant.TaskType.MAIN_LINE
+                    && cfg.getTaskType() != TaskConstant.TaskType.ACHIEVEMENT)) {
                 continue;
             }
+            BadgeSeed badge = null;
+            if (cfg.getTaskType() == TaskConstant.TaskType.ACHIEVEMENT) {
+                badge = badgeSeeds.get(cfg.getBadgeID());
+                if (cfg.getBadgeID() <= 0 || badge == null) {
+                    log.warn("成就任务缺少有效徽章配置, 不加载 taskId={},badgeId={}",
+                            cfg.getId(), cfg.getBadgeID());
+                    continue;
+                }
+            }
+
             PreparedCondition prepared;
             try {
                 prepared = conditionRules.prepare(ConditionSpec.from(cfg.getTaskConditionId()));
             } catch (IllegalArgumentException e) {
-                log.warn("sim 任务条件配置非法, 不加入任务链 taskId={},condition={},error={}",
+                log.warn("sim 任务条件配置非法, 不加载 taskId={},condition={},error={}",
                         cfg.getId(), cfg.getTaskConditionId(), e.getMessage());
                 continue;
             }
             if (prepared.eventType() == StateConditionEvent.class
                     && !SimTaskStateEventFactory.supports(prepared)) {
-                log.warn("sim 任务状态条件缺少可靠数据源, 不加入任务链 taskId={},conditionId={}",
+                log.warn("sim 任务状态条件缺少可靠数据源, 不加载 taskId={},conditionId={}",
                         cfg.getId(), prepared.spec().id());
                 continue;
             }
+            if (badge != null && badge.gameId() <= 0
+                    && GameWinEvent.class.isAssignableFrom(prepared.eventType())) {
+                log.warn("全局徽章任务不能由游戏结算推进, 不加载 taskId={},badgeId={},conditionId={}",
+                        cfg.getId(), cfg.getBadgeID(), prepared.spec().id());
+                continue;
+            }
+
             ConditionCfg conditionCfg = GameDataManager.getConditionCfg(prepared.spec().id());
             String legacyType = conditionCfg == null ? null : conditionCfg.getTriggerEventType();
             String counterType = legacyType == null || legacyType.isBlank()
                     ? "condition" + prepared.spec().id() : legacyType;
             tmpConditions.put(cfg.getId(), new TaskConditionDef(prepared, counterType));
+
             if (cfg.getTaskType() == TaskConstant.TaskType.MAIN_LINE) {
                 mains.add(cfg);
-            } else if (cfg.getTaskType() == TaskConstant.TaskType.ACHIEVEMENT) {
-                groups.computeIfAbsent(cfg.getGroup(), k -> new ArrayList<>()).add(cfg);
+                continue;
+            }
+
+            achievements.add(cfg.getId());
+            tasksByBadge.computeIfAbsent(cfg.getBadgeID(), ignored -> new ArrayList<>()).add(cfg.getId());
+            if (badge.gameId() > 0) {
+                tasksByGame.computeIfAbsent(badge.gameId(), ignored -> new ArrayList<>()).add(cfg.getId());
+            }
+            tasksByEvent.computeIfAbsent(prepared.eventType(), ignored -> new ArrayList<>()).add(cfg.getId());
+            if (prepared.eventType() == StateConditionEvent.class) {
+                stateTasks.add(cfg.getId());
             }
         }
 
-        Map<Integer, Integer> tmpNext = new HashMap<>();
-
         mains.sort(Comparator.comparingInt(TaskCfg::getId));
+        Map<Integer, Integer> tmpNext = new HashMap<>();
         List<Integer> tmpMain = new ArrayList<>(mains.size());
-        buildChain(mains, tmpMain, tmpNext);
+        for (int i = 0; i < mains.size(); i++) {
+            int id = mains.get(i).getId();
+            tmpMain.add(id);
+            tmpNext.put(id, i + 1 < mains.size() ? mains.get(i + 1).getId() : 0);
+        }
+        achievements.sort(Integer::compareTo);
+        stateTasks.sort(Integer::compareTo);
 
-        Map<Integer, List<Integer>> tmpGroups = new HashMap<>();
-        for (Map.Entry<Integer, List<TaskCfg>> en : groups.entrySet()) {
-            List<TaskCfg> list = en.getValue();
-            list.sort(Comparator.comparingInt(TaskCfg::getId));
-            List<Integer> ids = new ArrayList<>(list.size());
-            buildChain(list, ids, tmpNext);
-            tmpGroups.put(en.getKey(), Collections.unmodifiableList(ids));
+        Map<Integer, AchievementBadgeDef> tmpBadges = new HashMap<>();
+        for (BadgeSeed seed : badgeSeeds.values()) {
+            List<Integer> taskIds = tasksByBadge.getOrDefault(seed.badgeId(), List.of());
+            if (taskIds.isEmpty()) {
+                continue;
+            }
+            tmpBadges.put(seed.badgeId(), new AchievementBadgeDef(
+                    seed.badgeId(), seed.buildingId(), seed.gameId(), List.copyOf(taskIds), seed.tiers()));
         }
 
-        this.mainChain = Collections.unmodifiableList(tmpMain);
-        this.achievementGroups = Collections.unmodifiableMap(tmpGroups);
-        this.nextIndex = Collections.unmodifiableMap(tmpNext);
-        this.conditions = Collections.unmodifiableMap(tmpConditions);
-        //列出主线节点 id: 条件校验失败的节点会被上面的 continue 排除, 对比配置表即可发现缺了谁
-        log.info("加载 sim 任务链: 主线 {} 条, 成就组 {} 个, 主线节点={}",
-                tmpMain.size(), tmpGroups.size(), tmpMain);
+        this.mainChain = List.copyOf(tmpMain);
+        this.nextIndex = Map.copyOf(tmpNext);
+        this.conditions = Map.copyOf(tmpConditions);
+        this.achievementTaskIds = List.copyOf(achievements);
+        this.achievementTasksByBadge = immutableListMap(tasksByBadge);
+        this.achievementTasksByGame = immutableListMap(tasksByGame);
+        this.achievementTasksByEvent = immutableEventMap(tasksByEvent);
+        this.achievementStateTaskIds = List.copyOf(stateTasks);
+        this.badgeDefinitions = Map.copyOf(tmpBadges);
+        log.info("加载 sim 任务配置: 主线 {} 条, 成就 {} 条, 徽章 {} 个, 主线节点={}",
+                tmpMain.size(), achievements.size(), tmpBadges.size(), tmpMain);
     }
 
-    /**
-     * 把已按 id 升序的配置列表串成链: 写出 id 顺序列表, 同时登记每个节点的 next。
-     */
-    private void buildChain(List<TaskCfg> sorted, List<Integer> outIds, Map<Integer, Integer> outNext) {
-        for (int i = 0; i < sorted.size(); i++) {
-            int id = sorted.get(i).getId();
-            outIds.add(id);
-            outNext.put(id, i + 1 < sorted.size() ? sorted.get(i + 1).getId() : 0);
+    private Map<Integer, BadgeSeed> loadBadgeSeeds() {
+        List<MedalBuffCfg> all = GameDataManager.getMedalBuffCfgList();
+        if (all == null || all.isEmpty()) {
+            log.warn("加载成就徽章配置失败: MedalBuff 配置为空");
+            return Map.of();
         }
+        Map<Integer, List<MedalBuffCfg>> grouped = new HashMap<>();
+        for (MedalBuffCfg cfg : all) {
+            if (cfg != null && cfg.getMedalType() > 0) {
+                grouped.computeIfAbsent(cfg.getMedalType(), ignored -> new ArrayList<>()).add(cfg);
+            }
+        }
+
+        Map<Integer, BadgeSeed> result = new HashMap<>();
+        for (Map.Entry<Integer, List<MedalBuffCfg>> entry : grouped.entrySet()) {
+            List<MedalBuffCfg> configs = entry.getValue();
+            configs.sort(Comparator.comparingInt(MedalBuffCfg::getCollectNum)
+                    .thenComparingInt(MedalBuffCfg::getId));
+            int buildingId = configs.getFirst().getBuildID();
+            int gameId = 0;
+            if (buildingId > 0) {
+                BuildingAreaTableCfg building = GameDataManager.getBuildingAreaTableCfg(buildingId);
+                if (building == null || building.getUnlockGameId() <= 0) {
+                    log.warn("徽章缺少有效游戏建筑配置, 不加载 badgeId={},buildingId={}",
+                            entry.getKey(), buildingId);
+                    continue;
+                }
+                gameId = building.getUnlockGameId();
+            }
+
+            List<BadgeBuffTier> tiers = new ArrayList<>(configs.size());
+            for (MedalBuffCfg cfg : configs) {
+                if (cfg.getBuildID() != buildingId) {
+                    log.warn("同一徽章档位配置的建筑不一致, 忽略 cfgId={},badgeId={},buildingId={},expected={}",
+                            cfg.getId(), entry.getKey(), cfg.getBuildID(), buildingId);
+                    continue;
+                }
+                EnumMap<BuildingOutputType, Integer> buffs = new EnumMap<>(BuildingOutputType.class);
+                if (cfg.getBuffId() != null) {
+                    for (Map.Entry<Integer, Integer> buff : cfg.getBuffId().entrySet()) {
+                        BuildingOutputType type = buff.getKey() == null
+                                ? null : BuildingOutputType.fromCode(buff.getKey());
+                        if (type == null) {
+                            log.warn("徽章加成类型无效, 忽略 cfgId={},outputType={}", cfg.getId(), buff.getKey());
+                        } else if (buff.getValue() != null && buff.getValue() != 0) {
+                            buffs.merge(type, buff.getValue(), Integer::sum);
+                        }
+                    }
+                }
+                tiers.add(new BadgeBuffTier(cfg.getId(), cfg.getCollectNum(),
+                        Collections.unmodifiableMap(buffs)));
+            }
+            if (!tiers.isEmpty()) {
+                result.put(entry.getKey(), new BadgeSeed(
+                        entry.getKey(), buildingId, gameId, List.copyOf(tiers)));
+            }
+        }
+        return result;
     }
 
-    // ---------------------------------------------------------------------
-    // 主线
-    // ---------------------------------------------------------------------
+    private static Map<Integer, List<Integer>> immutableListMap(Map<Integer, List<Integer>> source) {
+        Map<Integer, List<Integer>> result = new HashMap<>(source.size());
+        source.forEach((key, value) -> {
+            value.sort(Integer::compareTo);
+            result.put(key, List.copyOf(value));
+        });
+        return Map.copyOf(result);
+    }
 
-    /**
-     * 主线首节点 id; 无主线返回 0
-     */
+    private static Map<Class<? extends ConditionEvent>, List<Integer>> immutableEventMap(
+            Map<Class<? extends ConditionEvent>, List<Integer>> source) {
+        Map<Class<? extends ConditionEvent>, List<Integer>> result = new HashMap<>(source.size());
+        source.forEach((key, value) -> {
+            value.sort(Integer::compareTo);
+            result.put(key, List.copyOf(value));
+        });
+        return Map.copyOf(result);
+    }
+
     public int firstMain() {
         List<Integer> chain = this.mainChain;
         return chain.isEmpty() ? 0 : chain.getFirst();
     }
 
-    // ---------------------------------------------------------------------
-    // 成就
-    // ---------------------------------------------------------------------
-
-    /**
-     * 所有成就组 id
-     */
-    public Set<Integer> achievementGroupIds() {
-        return this.achievementGroups.keySet();
-    }
-
-    /**
-     * 成就组首节点 id; 组不存在返回 0
-     */
-    public int firstOf(int group) {
-        List<Integer> chain = this.achievementGroups.get(group);
-        return chain == null || chain.isEmpty() ? 0 : chain.getFirst();
-    }
-
-    // ---------------------------------------------------------------------
-    // 通用
-    // ---------------------------------------------------------------------
-
-    /**
-     * 链内下一节点 id; 末节点或未知 id 返回 0
-     */
     public int next(int taskId) {
         return this.nextIndex.getOrDefault(taskId, 0);
     }
@@ -203,7 +278,82 @@ public class SimTaskConfigService implements ConfigExcelChangeListener {
         return conditions.get(taskId);
     }
 
+    public List<Integer> achievementTaskIds() {
+        return achievementTaskIds;
+    }
+
+    public List<Integer> achievementTaskIds(int badgeId) {
+        return badgeId <= 0 ? achievementTaskIds
+                : achievementTasksByBadge.getOrDefault(badgeId, List.of());
+    }
+
+    public List<Integer> achievementStateTaskIds() {
+        return achievementStateTaskIds;
+    }
+
+    /** 高频游戏事件只检查所属游戏的成就；其他事件按条件事件类型取候选。 */
+    public List<Integer> achievementTaskIdsFor(ConditionEvent event) {
+        if (event instanceof GameConditionEvent gameEvent) {
+            LinkedHashSet<Integer> ids = new LinkedHashSet<>();
+            ids.addAll(achievementTasksByGame.getOrDefault(gameEvent.gameId(), List.of()));
+            ids.addAll(achievementTasksByGame.getOrDefault(gameEvent.gameType(), List.of()));
+            return ids.isEmpty() ? List.of() : List.copyOf(ids);
+        }
+        if (event instanceof GameWinEvent gameEvent) {
+            return achievementTasksByGame.getOrDefault(gameEvent.gameId(), List.of());
+        }
+        if (event == null) {
+            return List.of();
+        }
+        LinkedHashSet<Integer> ids = new LinkedHashSet<>();
+        achievementTasksByEvent.forEach((type, taskIds) -> {
+            if (type.isInstance(event)) {
+                ids.addAll(taskIds);
+            }
+        });
+        return ids.isEmpty() ? List.of() : List.copyOf(ids);
+    }
+
+    public AchievementBadgeDef badge(int badgeId) {
+        return badgeDefinitions.get(badgeId);
+    }
+
+    public List<AchievementBadgeDef> badges() {
+        return badgeDefinitions.values().stream()
+                .sorted(Comparator.comparingInt(AchievementBadgeDef::badgeId))
+                .toList();
+    }
+
     /** 配置加载后不可变，可被玩家热路径无锁复用。 */
     public record TaskConditionDef(PreparedCondition condition, String counterType) {
+    }
+
+    public record BadgeBuffTier(int cfgId, int collectNum, Map<BuildingOutputType, Integer> buffs) {
+    }
+
+    public record AchievementBadgeDef(int badgeId, int buildingId, int gameId,
+                                      List<Integer> taskIds, List<BadgeBuffTier> tiers) {
+        public BadgeBuffTier activeTier(int completedCount) {
+            BadgeBuffTier active = null;
+            for (BadgeBuffTier tier : tiers) {
+                if (tier.collectNum() > completedCount) {
+                    break;
+                }
+                active = tier;
+            }
+            return active;
+        }
+
+        public BadgeBuffTier nextTier(int completedCount) {
+            for (BadgeBuffTier tier : tiers) {
+                if (tier.collectNum() > completedCount) {
+                    return tier;
+                }
+            }
+            return null;
+        }
+    }
+
+    private record BadgeSeed(int badgeId, int buildingId, int gameId, List<BadgeBuffTier> tiers) {
     }
 }
